# website

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .npmrc  .taplo.toml  .textlintrc.json  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRANSLATIONS.md  astro.config.ts  biome-revision  biome.json  ec.config.mjs  justfile  lunaria.config.json  netlify.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  prh.yml  redirects.js  report.json  rust-toolchain.toml  tombi.toml  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  issue-labeler.yaml  pull-request-labeler.yaml  renovate.json
.github/ISSUE_TEMPLATE/: config.yaml
.github/actions/build-playground/: action.yml
.github/actions/run-codegen/: action.yaml
.github/actions/run-codegen-rules/: action.yaml
.github/actions/setup-rust-toolchain/: action.yaml
.github/workflows/: file-change-guard.yaml  forward-preview-link.yaml  integrate.yaml  ja-translation.yaml  label-issue.yaml  label-pull-request.yaml  lunaria.yml  pin-submodule-and-run-codegen.yaml  playwright.yml  preview-deployment.yaml  run-codegen.yaml  schema.yml  synchronize.yaml  test.yaml  update-contributors.yaml  update-linter-pages.yml
codegen/: Cargo.toml
codegen/src/: configuration.rs  diagnostics.rs  domains.rs  env_variables.rs  lib.rs  lintdoc.rs  lsp.rs  main.rs  metadata.rs  redirects.rs  rules_sources.rs  shared.rs  website.rs
public/: _redirects  install  install.ps1
scripts/: README.md  package.json  test-gritql.js  update-contributors.js  update-revision.sh
scripts/netlify/plugins/wasm-cache/: index.js  manifest.yml
scripts/utils/: argv.js  constants.js
src/: content.config.ts  env.d.ts  middleware.ts  routeData.ts
src/blog/posts/: biome-v1-5.md  biome-v1-6.mdx  biome-v1-9.md  biome-wins-prettier-challenge.md
src/components/: Avatar.astro  AwardBanner.astro  BlogPostInfo.astro  Community.astro  Contributor.astro  Contributors.astro  CoreContributors.astro  EditorAction.astro  EditorSettings.astro  ExternalLinks.astro  FeaturedUsers.astro  GitHubAvatar.astro  InlineSVG.astro  LocaleNumber.astro  Maintainers.astro  Netlify.astro  PackageManagerBiomeCommand.astro  PackageManagerCommand.astro  PostsList.astro  Sponsors.astro
src/components/linter/: example.md
src/components/starlight/: Footer.astro  Head.astro  Hero.astro  LanguageSelect.astro  SiteTitle.astro
src/content/: config.ts  team.json  users.json
src/content/blog/: annoucing-biome.mdx  biome-v1-6.mdx  biome-v1-7.md  biome-v1-9.md
src/content/docs/: index.mdx
src/content/docs/analyzer/: import-sorting.mdx  plugins.mdx  suppressions.mdx
src/content/docs/assist/: index.mdx  rules-sources.mdx
src/content/docs/blog/: 2025-05-29-biome-vscode-v3.md  annoucing-biome.mdx  announcing-biome.mdx  biome-v1-5.md  biome-v1-6.mdx  biome-v1-7.md  biome-v1-9.md  biome-v1.mdx  biome-v2-0-beta.md  biome-v2-1.mdx  biome-v2-3.md  biome-v2-3.mdx  biome-v2-4.mdx  biome-v2-5.mdx  biome-v2.mdx  biome-vscode-v3.md  biome-wins-prettier-challenge.md  collaboration-new-docs.mdx  depot-exclusive-sponsor.md  depot-exclusive-sponsor.mdx  gritql-under-biome-umbrella.mdx  roadmap-2024.md  roadmap-2025.md  roadmap-2026.md  vercel-partners-biome-type-inference.md
src/content/docs/editors/: introduction.mdx  third-party-extensions.mdx
src/content/docs/es/: 404.md  index.mdx
src/content/docs/formatter/: differences-with-prettier.md  editorconfig-support.md  index.mdx  option-philosophy.md
src/content/docs/fr/: 404.md  index.mdx
src/content/docs/guides/: big-projects.mdx  configure-biome.mdx  diagnostics-anatomy.mdx  getting-started.mdx  how-biome-works.mdx  integrate-in-editor.mdx  integrate-in-vcs.mdx  investigate-slowness.mdx  manual-installation.mdx  migrate-eslint-prettier.mdx  upgrade-to-biome-v2.mdx
src/content/docs/internals/: architecture.mdx  changelog.md  changelog_v1.md  credits.mdx  language-support.mdx  people-and-credits.mdx  philosophy.mdx  versioning.mdx
src/content/docs/ja/: index.mdx
src/content/docs/linter/: domains.mdx  index.mdx  plugins.mdx  rules-sources.mdx
src/content/docs/pl/: 404.md  index.mdx
src/content/docs/pt-BR/: index.mdx
src/content/docs/pt-br/: index.mdx
src/content/docs/recipes/: badges.mdx  continuous-integration.mdx  git-hooks.mdx  gritql-plugins.mdx  renovate.mdx
src/content/docs/reference/: cli.mdx  (+10 more)
src/content/i18n/: en.json  ja.json  pl.json  ru.json  zh-CN.json  zh-TW.json
src/frontend-scripts/: util.ts
src/pages/: enterprise.astro  feed.xml.js  playground.astro  support.astro  users.astro
src/pages/api/: versions.ts
src/pages/blog/: [...slug].astro
src/pages/metadata/: _metadata.json  metadata.json.js  rules.json.js  schema.json.js
src/pages/og/: [...path].ts
src/playground/: CodeMirror.tsx  Collapsible.tsx  Playground.tsx  PlaygroundLoader.tsx  buildBiomeConfiguration.ts  main.tsx  types.ts  utils.ts
src/playground/codemirror/: javascriptWithEmbeddedSnippets.ts
src/playground/components/: BiomeHeader.tsx  DiagnosticsPane.tsx  EnumSelect.tsx  PrettierHeader.tsx  Progress.tsx  Resizable.tsx  SettingsJsonEditorModal.tsx  SettingsPanel.tsx  Tabs.tsx
src/playground/tabs/: AnalyzerFixesTab.tsx  ControlFlowTab.tsx  DiagnosticsConsoleTab.tsx  DiagnosticsListTab.tsx  FormatterCodeTab.tsx  FormatterIrTab.tsx  GritQLSearchTab.tsx  SemanticModelTab.tsx  SettingsTab.tsx  SyntaxTab.tsx  TypeInfoTab.tsx  TypesRegisteredTab.tsx
src/playground/workers/: biomeWorker.ts  prettierWorker.ts
src/styles/: _award.css  _card.css  _community.css  _credits.css  _customScroll.css  _global.css  _grid.css  _installation.css  _mixins.css  _overrides.css  _overrides.scss  _patches.css  _patches.scss  _performance.css  _pre.css  _prism.css  _progress.css  _reset.css  _rules.css  _sponsors.css  _users.css  _variables.css  index.css
src/styles/blog/: _blog.css
src/styles/playground/: _code.css  _diagnostics.css  _gritql.css  _results.css  _settings.css  _tabs.css  _tabs.scss  index.css
src/utils/: getOgImageUrl.ts
tests/playground/: smoke.spec.ts
(+1421 files in other folders)
