[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
description = "Crate used to generate pages from the Rust source code of Biome"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_analyze      = { workspace = true }
biome_console      = { workspace = true }
biome_css_analyze  = { workspace = true }
biome_css_parser   = { workspace = true }
biome_css_syntax   = { workspace = true }
biome_diagnostics  = { workspace = true }
biome_js_analyze   = { workspace = true }
biome_js_parser    = { workspace = true }
biome_js_syntax    = { workspace = true }
biome_json_analyze = { workspace = true }
biome_json_parser  = { workspace = true }
biome_json_syntax  = { workspace = true }
biome_service      = { workspace = true }
biome_string_case  = { workspace = true }
pulldown-cmark     = { version = "0.9", default-features = false }
anyhow = "1.0.82"
fs2 = "0.4.3"
