[package]
name        = "codegen"
version     = "0.1.0"
edition     = "2021"
description = "Crate used to generate pages from the Rust source code of Biome"
publish     = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
biome_analyze        = { git = "https://github.com/biomejs/biome.git" }
biome_cli            = { git = "https://github.com/biomejs/biome.git" }
biome_configuration  = { git = "https://github.com/biomejs/biome.git" }
biome_console        = { git = "https://github.com/biomejs/biome.git" }
biome_css_analyze    = { git = "https://github.com/biomejs/biome.git" }
biome_css_parser     = { git = "https://github.com/biomejs/biome.git" }
biome_css_syntax     = { git = "https://github.com/biomejs/biome.git" }
biome_diagnostics    = { git = "https://github.com/biomejs/biome.git" }
biome_js_analyze     = { git = "https://github.com/biomejs/biome.git" }
biome_js_formatter   = { git = "https://github.com/biomejs/biome.git" }
biome_js_parser      = { git = "https://github.com/biomejs/biome.git" }
biome_js_syntax      = { git = "https://github.com/biomejs/biome.git" }
biome_json_analyze   = { git = "https://github.com/biomejs/biome.git" }
biome_json_formatter = { git = "https://github.com/biomejs/biome.git" }
biome_json_parser    = { git = "https://github.com/biomejs/biome.git" }
biome_json_syntax    = { git = "https://github.com/biomejs/biome.git" }
biome_rowan          = { git = "https://github.com/biomejs/biome.git" }
biome_service        = { git = "https://github.com/biomejs/biome.git" }
biome_string_case    = { git = "https://github.com/biomejs/biome.git" }
anyhow               = "1.0.83"
bpaf                 = { version = "0.9.12", features = ["docgen"] }
# If you update this library, be aware of the breaking changes
pulldown-cmark       = "0.10.3"
schemars             = "0.8.21"
serde                = "1.0.203"
serde_json           = "1.0.117"

